# skills

./: .gitignore  IPD-harness.docx  Python38兼容性修复说明.md  skills_config.json  到款.docx
browser-harness/: SKILL.md  _meta.json  admin.py  cdp_client.py  daemon.py  helpers.py  install.md  pyproject.toml  run.py
browser-harness/domain-skills/facebook/: groups.md  pages.md
browser-harness/domain-skills/github/: scraping.md
browser-harness/domain-skills/package-registries/: npm-pypi.md
browser-harness/libs/: websockets-13.1-cp38-cp38-win_amd64.whl
docx/: TEST_SUMMARY.md  test_docx_skill.py
docx/scripts/: accept_changes.py  comment.py
docx/scripts/office/: pack.py  soffice.py  unpack.py
pdf/: SKILL.md  forms.md
pdf/scripts/: check_bounding_boxes.py  fill_pdf_form_with_annotations.py
ppt-master/: SKILL.md
ppt-master/projects/时光之歌_ppt_ppt169_20260331/: README.md  design_spec.md
ppt-master/projects/超临界二氧化碳_template/: analysis.md  manifest.json
ppt-master/scripts/: analyze_images.py  batch_validate.py  finalize_svg.py  gemini_watermark_remover.py  image_gen.py  svg_position_calculator.py  total_md_split.py
ppt-master/scripts/image_backends/: backend_common.py  backend_replicate.py  backend_stability.py
ppt-master/scripts/source_to_md/: doc_to_md.py  pdf_to_md.py  web_to_md.py
ppt-master/scripts/svg_finalize/: crop_images.py  embed_icons.py  embed_images.py  fix_image_aspect.py  flatten_tspan.py  svg_rect_to_path.py
pptx/: SKILL.md  editing.md  pptxgenjs.md
pptx/scripts/: add_slide.py  clean.py  thumbnail.py
pptx/scripts/office/: soffice.py
(+9 files in other folders)
